On iPad 1, padding prevented transformed chord text at the left margin being displayed. Removing horizontal tranformation from the webkit declaration so that later browsers still centre the chords, but they are legible if misplaced on ipdad.

--- a/webroot/css/song-lyrics.css
+++ b/webroot/css/song-lyrics.css
@@ -68,7 +68,7 @@
 .chord .chord-symbol-align {
     position: absolute;
     transform: translate(-50%, -80%);
-    -webkit-transform: translate(-50%, -80%);
+    -webkit-transform: translate(-0%, -80%);
 }
 
 .chord.full-width {
